k8s/prod/ingresses/cradle-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toyeglobal-app-ingress
  namespace: prod
  annotations:
    # acme.cert-manager.io/http01-edit-in-place: 'true'
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-eyot
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: toyeglobal.dglidestcl.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: toyeglobal-app
              port:
               number: 80
  tls:
    - hosts:
        - toyeglobal.dglidestcl.com
      secretName:  letsencrypt-eyot
